Added Google Auth into Auth0

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="manifest" href="%PUBLIC_URL%/fibblogoimade.png" />
+    <link rel="test" href="%PUBLIC_URL%/fibblogoimade.png" />
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -29,7 +29,7 @@
     <title>fibb.ai</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Authentic Generative AI Photos for your need. </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
